; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ck/src/extr_ck_rhs.c_ck_rhs_reset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ck/src/extr_ck_rhs.c_ck_rhs_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ck_rhs = type { %struct.ck_rhs_map* }
%struct.ck_rhs_map = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ck_rhs_reset(%struct.ck_rhs* %0) #0 {
  %2 = alloca %struct.ck_rhs*, align 8
  %3 = alloca %struct.ck_rhs_map*, align 8
  store %struct.ck_rhs* %0, %struct.ck_rhs** %2, align 8
  %4 = load %struct.ck_rhs*, %struct.ck_rhs** %2, align 8
  %5 = getelementptr inbounds %struct.ck_rhs, %struct.ck_rhs* %4, i32 0, i32 0
  %6 = load %struct.ck_rhs_map*, %struct.ck_rhs_map** %5, align 8
  store %struct.ck_rhs_map* %6, %struct.ck_rhs_map** %3, align 8
  %7 = load %struct.ck_rhs*, %struct.ck_rhs** %2, align 8
  %8 = load %struct.ck_rhs_map*, %struct.ck_rhs_map** %3, align 8
  %9 = getelementptr inbounds %struct.ck_rhs_map, %struct.ck_rhs_map* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @ck_rhs_reset_size(%struct.ck_rhs* %7, i32 %10)
  ret i32 %11
}

declare dso_local i32 @ck_rhs_reset_size(%struct.ck_rhs*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
